tests/compile_fail/state_machine/no_machine_module.stderr
error: no `moku::machine_module` was defined in this module
 --> tests/compile_fail/state_machine/no_machine_module.rs:4:1
  |
4 | mod blinky {
  | ^^^
